--- a/app/templates/components/story-tile.hbs
+++ b/app/templates/components/story-tile.hbs
@@ -1,7 +1,8 @@
 <li>{{story.headline}} {{story.author}} {{story.body}}
   {{#if isImageShowing}}
-    <p><img scr={{story.image}} alt={{story.headline}}></p>
+    <p><img src={{story.image}} alt={{story.headline}}></p>
   {{else}}
     <button {{action 'imageShow'}}>Show image</button>
   {{/if}}
+  <button {{action 'delete' rental}}>>Delete</button>
 </li>
