--- a/app/templates/components/story-tile.hbs
+++ b/app/templates/components/story-tile.hbs
@@ -4,5 +4,5 @@
   {{else}}
     <button {{action 'imageShow'}}>Show image</button>
   {{/if}}
-  <button {{action 'delete' rental}}>>Delete</button>
+  <button {{action 'delete' story}}>Delete</button>
 </li>
