--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -4,7 +4,7 @@ Here are our top stories:
 
 <ul>
   {{#each model as |story|}}
-    {{story-tile story=story}}
+    {{story-tile story=story destroyStory="destroyStory"}}
   {{/each}}
 </ul>
 
