--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -8,5 +8,7 @@ Here are our top stories:
   {{/each}}
 </ul>
 
+{{new-story save2="save3"}}
+
 {{#link-to 'about'}}About{{/link-to}}
 {{#link-to 'contact'}}Click here to contact us.{{/link-to}}
