--- a/app/templates/components/story-tile.hbs
+++ b/app/templates/components/story-tile.hbs
@@ -4,6 +4,7 @@
   {{else}}
     <button {{action 'imageShow'}}>Show image</button>
   {{/if}}
+  {{update-story story=story update="update"}}
   <button {{action 'delete' story}}>Delete</button>
   <br>
 </li>
