--- a/app/templates/admin.hbs
+++ b/app/templates/admin.hbs
@@ -1,5 +1,3 @@
-
-
 <div class="navbar navbar-inverse navbar-fixed-top">
   <div class="container">
     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -11,10 +9,10 @@
     <a class="navbar-brand text-muted" href="#">Bustle</a>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav navbar-right">
-        <li class="active"><a href="#">Home</a></li>
+        <li class="active"><a href="#">Admin</a></li>
         <li class="">{{#link-to 'about'}}About{{/link-to}}</li>
         <li class="">{{#link-to 'contact'}}Click here to contact us.{{/link-to}}</li>
-        <li class="">{{#link-to 'admin'}}Click here to edit content.{{/link-to}}</li>
+        <li class="">{{#link-to 'index'}}Home.{{/link-to}}</li>
       </ul>
     </div>
   </div>
