--- a/app/templates/story.hbs
+++ b/app/templates/story.hbs
@@ -1,1 +1,26 @@
-{{outlet}}
+<div class="navbar navbar-inverse navbar-fixed-top">
+  <div class="container">
+    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+    </button>
+
+    <a class="navbar-brand text-muted" href="#">Bustle</a>
+    <div class="collapse navbar-collapse">
+      <ul class="nav navbar-nav navbar-right">
+        <li class="">{{#link-to 'index'}}Home{{/link-to}}</li>
+        <li class="">{{#link-to 'about'}}About{{/link-to}}</li>
+        <li class="">{{#link-to 'contact'}}Click here to contact us.{{/link-to}}</li>
+      </ul>
+    </div>
+  </div>
+</div>
+<h2>{{model.headline}}</h2>
+<img src={{model.image}} alt={{model.headline}}/>
+<hr />
+
+<p>{{model.body}}</p>
+
+<hr />
+<p>Written by {{model.author}}</p>
